- complete shape manipulation api for tensors