@@ -95,6 +95,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0</version>
+                <configuration>
+                    <!--<reuseForks>true</reuseForks>-->
+                    <!--suppress UnresolvedMavenProperty -->
+                    <argLine> --enable-preview --add-modules=jdk.incubator.vector</argLine>
+                </configuration>
             </plugin>
             <!--
             wait for upgrade
